[package]
name        = "foxy_utils"
version     = "0.3.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/foxy-rs/foxy_utils"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "Common types and utilities for `foxy` submodules"
keywords    = ["foxy"]
categories  = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing   = { version = "0.1" }

glam      = "0.25"
strum     = { version = "0.26", features = ["derive"] }
quanta    = "0.12"
crossbeam = "0.8"
